WT-13788: Fix WPanel collapse button in dark mode

--- a/src/themes/bootstrap/5/wt/_variables.scss
+++ b/src/themes/bootstrap/5/wt/_variables.scss
@@ -18,8 +18,10 @@ $wt-time-edit-feedback-icon-size: $form-select-feedback-icon-size !default;
 $wt-time-edit-feedback-icon-padding-end: $form-select-feedback-icon-padding-end !default;
 
 $wt-panel-collapse-icon: $accordion-button-icon !default;
+$wt-panel-collapse-icon-dark: $accordion-button-icon-dark !default;
 $wt-panel-collapse-icon-width: $accordion-icon-width !default;
 $wt-panel-collapse-active-icon: $accordion-button-active-icon !default;
+$wt-panel-collapse-active-icon-dark: $accordion-button-active-icon-dark !default;
 $wt-panel-collapse-icon-transform: $accordion-icon-transform !default;
 $wt-panel-collapse-icon-transition: $accordion-icon-transition !default;
 
